--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "nuxt": "^3.17.4",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.15",
-    "vue-router": "^4.5.1"
+    "vue-draggable-next": "^2.2.1",
+    "vue-router": "^4.5.1",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0"
