--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
     "nuxt": "^3.17.4",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.15",
@@ -19,6 +21,7 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@nuxt/vite-builder": "^3.17.5",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0"
   }
 }
