--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@tailwindcss/vite": "^4.1.8",
+    "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.9.0",
-    "nuxt": "^3.17.4",
-    "tailwindcss": "^4.1.8",
-    "vue": "^3.5.15",
+    "nuxt": "^3.17.5",
+    "tailwindcss": "^4.1.10",
+    "vue": "^3.5.16",
     "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.5.1",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@nuxt/vite-builder": "^3.17.5",
-    "@nuxtjs/tailwindcss": "^7.0.0-beta.0"
+    "@nuxtjs/tailwindcss": "7.0.0-beta.0"
   }
 }
